--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "json-server": "^0.16.1",
     "popper.js": "^1.16.1",
     "vue": "^2.6.11",
-    "vue-router": "^3.4.3"
+    "vue-router": "^3.4.3",
+    "vue-sweetalert2": "^3.0.6"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
